--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,10 @@ Contact: Paul Julian ([email](mailto:pauljulianphd@gmail.com))
 
 ### CEPP PACR Analysis
 
+### Slide Decks
+
+* CEPP PACR Modeling Eval | [slides](https://sccf-tech.github.io/CEPP_ModelEval/slides/SCCF_CEPP_Eval.html) | pdf |
+
 *Work In Progress*
 
 
