--- a/slides/SCCF_CEPP_Eval.Rmd
+++ b/slides/SCCF_CEPP_Eval.Rmd
@@ -235,6 +235,17 @@ name: CRE MFL2
 knitr::include_graphics("./Plots/CREMFL_Alts.png")
 ```
 
+
+---
+name: CRE Q
+
+### Caloosahatchee Discharge 
+
+```{r,out.width="100%",fig.align="center",fig.cap="Discharges to Caloosahatchee below, within and above zone D of the Lake regulation schedule."}
+
+knitr::include_graphics("./Plots/S79Q_zones.png")
+```
+
 ---
 name: SLE
 
